Two column image

--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -554,11 +554,12 @@ clearly see improvement. This improvement can be contributed to having improved
 COVID-19 distribution compared to the original dataset only 100 COVID-19 images
 \cite{10.1093/jamia/ocaa280}.
 
-\begin{figure}[h]
-    \includegraphics[width=8cm]{../doc/images/original_vs_patched_f1.png}
+\begin{figure*}[h]
+    \centering
+    \includegraphics[width=0.9\textwidth]{../doc/images/original_vs_patched_flannel_f1.png}
     \caption{FLANNEL Improvement}
     \label{fig:f1score}
-\end{figure}
+\end{figure*}
 
 
 In Table \ref{table:resultstats}, we also show F1-score for each classification
